[project]
name = "re-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "torch==2.9.0",
  "torchvision==0.24.0",
  "dgl==2.5.0",
  "scikit-learn>=1.8.0",
  "tqdm>=4.67.3",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" },
]
dgl = [
  { index = "dgl-cu130" }
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "dgl-cu130"
url = "https://gitlab.com/api/v4/projects/1060110/packages/pypi/simple"
explicit = true
